Вот – в pom.xml поправил jacoco